--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
   <button onclick="document.getElementById('it-wasnt-as-easy').play()">it-wasnt-as-easy</button>
   <audio id="i-fell-in-love" src="i-fell-in-love.mp3"></audio>
   <button onclick="document.getElementById('i-fell-in-love').play()">i-fell-in-love</button>
+  <audio id="really-want-it" src="really-want-it.mp3"></audio>
+  <button onclick="document.getElementById('really-want-it').play()">really-want-it</button>
 </body>
 </html>
