--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <button onclick="document.getElementById('see-ya-in-class').play()">see-ya-in-class</button>
   <audio id="analyzing-results" src="analyzing-results.mp3"></audio>
   <button onclick="document.getElementById('analyzing-results').play()">analyzing-results</button>
-  <audio id="leadership" src="leadership.mp3"></audio>
-  <button onclick="document.getElementById('leadership').play()">leadership</button>
+  <!--audio id="leadership" src="leadership.mp3"></audio>
+  <button onclick="document.getElementById('leadership').play()">leadership</button-->
   <audio id="the-energy" src="the-energy.mp3"></audio>
   <button onclick="document.getElementById('the-energy').play()">the-energy</button>
   <audio id="it-wasnt-as-easy" src="it-wasnt-as-easy.mp3"></audio>
