pic, more sounds

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     // Put code here or set the src attribute
   </script>
       <style type="text/css">
-      body { 
+      body {
+        background-image: url("pic.png");
+        background-size: cover;
+          background-repeat: no-repeat;
         font-size: 2em;
         width: 800px;
         background-color: white; margin: 0; padding: 0; font-family: sans-serif; font-size: 12px; }
           p { margin-bottom: 10px; }
           button {
             margin: 1em;
-              font-size: 2em;
+            font-size: 2em;
           }
     </style>
 </head>
@@ -42,5 +45,13 @@
   <button onclick="document.getElementById('i-fell-in-love').play()">i-fell-in-love</button>
   <audio id="really-want-it" src="really-want-it.mp3"></audio>
   <button onclick="document.getElementById('really-want-it').play()">really-want-it</button>
+  <audio id="thanks-for-interest" src="thanks-for-interest.mp3"></audio>
+  <button onclick="document.getElementById('thanks-for-interest').play()">thanks-for-interest</button>
+  <audio id="be-honest" src="be-honest.mp3"></audio>
+  <button onclick="document.getElementById('be-honest').play()">be-honest</button>
+  <audio id="good-luck" src="good-luck.mp3"></audio>
+  <button onclick="document.getElementById('good-luck').play()">good-luck</button>
+  <audio id="only-a-little" src="only-a-little.mp3"></audio>
+  <button onclick="document.getElementById('only-a-little').play()">only-a-little</button>
 </body>
 </html>
