--- a/index.html
+++ b/index.html
@@ -53,5 +53,15 @@
   <button onclick="document.getElementById('good-luck').play()">good-luck</button>
   <audio id="only-a-little" src="only-a-little.mp3"></audio>
   <button onclick="document.getElementById('only-a-little').play()">only-a-little</button>
+  <audio id="you-win-i-win" src="you-win-i-win.mp3"></audio>
+  <button onclick="document.getElementById('you-win-i-win').play()">you-win-i-win</button>
+  <audio id="primed-and-ready" src="primed-and-ready.mp3"></audio>
+  <button onclick="document.getElementById('primed-and-ready').play()">primed-and-ready</button>
+  <audio id="great-feeling" src="great-feeling.mp3"></audio>
+  <button onclick="document.getElementById('great-feeling').play()">great-feeling</button>
+  <audio id="its-an-exciting-business" src="its-an-exciting-business.mp3"></audio>
+  <button onclick="document.getElementById('its-an-exciting-business').play()">its-an-exciting-business</button>
+  <audio id="have-you-thought" src="have-you-thought.mp3"></audio>
+  <button onclick="document.getElementById('have-you-thought').play()">have-you-thought</button>
 </body>
 </html>
